--- a/src/www/home.html
+++ b/src/www/home.html
@@ -10,8 +10,7 @@
 
 <body>
   <template id="navbar">
-    <a href="/home"><img src="/public/home\.svg" alt="Application home"><span translate="yes"
-        translate="yes">Home</span></a>
+    <a href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes" translate="yes">Home</span></a>
   </template>
   <base target="_top" href="/">
   <h1 translate="yes">Application home page</h1>
