--- a/src/www/account/connect/submit-company-owners.html
+++ b/src/www/account/connect/submit-company-owners.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" data-navbar="/account/connect/navbar-stripe-account.html">
-<head>
-  <meta charset="utf-8" /> 
-  <title translate="yes">Submit owners for ${stripeAccount.id}</title>
-  <link rel="stylesheet" href="/public/pure-min.css">
-  <link rel="stylesheet" href="/public/content.css">
-  <link rel="stylesheet" href="/public/content-additional.css">
-  <base target="_top" href="/">
-  <script id="stripe-js-v2"></script>
-  <script id="stripe-js-v3"></script>
-</head>
-<body>
-  <h1 translate="yes">Submit owners for ${stripeAccount.id}</h1>
-  <p translate="yes">When you have finished adding all other owners, if any, submit them for review.</p>
-  <div id="message-container"></div>
-  <div id="owners-container">
-    <h2 translate="yes">Beneficial owners</h2>
-    <table id="owners-table" class="pure-table pure-table-striped list-table">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th translate="yes">Name</th>
-          <th translate="yes">Requires</th>
-        </tr>
-      </thead>
-    </table>
-  </div>
-  <form id="submit-form" method="post" class="pure-form pure-form-stacked" action="/account/connect/submit-company-owners?stripeid=${stripeAccount.id}" name="submit-form">
-    <div class="pure-controls spaced-buttons">
-      <button id="submit-button" class="pure-button pure-button-primary" translate="yes">Submit owners</button>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script id="stripe-js-v2"></script>
+    <script id="stripe-js-v3"></script>
+    <meta charset="utf-8" /> 
+    <title translate="yes">Submit owners for Stripe account</title>
+    <link rel="stylesheet" href="/public/content.css">
+    <link rel="stylesheet" href="/public/content-additional.css">
+    <base target="_top" href="/">
+  </head>
+  <body>
+    <div class="container">
+      <h1 translate="yes">Submit owners for Stripe account</h1>
+      <p translate="yes">When you have finished adding all other owners, if any, submit them for review.</p>
+      <div id="message-container"></div>
+      <div id="owners-container">
+        <h2 translate="yes">Owners</h2>
+        <div class="list-table-wrapper">
+          <table id="owners-table" class="list-table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th translate="yes">Name</th>
+                <th translate="yes">Requires</th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+      </div>
+      <form id="submit-form" method="post" class="input-form" action="/account/connect/submit-company-owners?stripeid=${stripeAccount.id}" name="submit-form">
+        <div class="button-group spaced-buttons">
+          <button id="submit-button" class="button" translate="yes">Submit owners</button>
+        </div>
+      </form>
     </div>
-  </form>
-  <template id="person-row">
-    <tr id="${person.id}">
-      <td>
-        <a href="/account/connect/person?personid=${person.id}">${person.id}</a>
-      </td>
-      <td>${person.first_name} ${person.last_name}</td>
-      <td id="requires-information-${person.id}">
-        <a class="pure-button" href="/account/connect/edit-person?personid=${person.id}&amp;return-url=/account/connect/submit-company-owners%3Fstripeid=${person.account}" translate="yes">Add information</a>
-      </td>
-      <td id="requires-no-information-${person.id}">-</td>
-    </tr> 
-  </template>
-  <template id="invalid-company-owners">
-    <div class="error message" translate="yes">
-      Error! There are owners still requiring information.
-    </div>
-  </template>
-  <template id="success">
-    <div class="success message" translate="yes">
-      Success! The company's owners has been submitted
-    </div>
-  </template>
-  <template id="unknown-error">
-    <div class="error message" translate="yes">
-      Error! An error occurred submitting the owners
-    </div>
-  </template>
-</body>
+    <template id="person-row">
+      <tr id="${person.id}">
+        <td><a href="/account/connect/person?personid=${person.id}">${person.id}</a></td>
+        <td>${person.first_name} ${person.last_name}</td>
+        <td id="requires-information-${person.id}"><a class="button" href="/account/connect/edit-person?personid=${person.id}&amp;return-url=/account/connect/submit-company-owners%3Fstripeid=${person.account}" translate="yes">Add information</a></td>
+        <td id="requires-no-information-${person.id}">-</td>
+      </tr> 
+    </template>
+    <template id="invalid-company-owners">
+      <div class="error message" translate="yes">
+        Error! There are owners still requiring information.
+      </div>
+    </template>
+    <template id="success">
+      <div class="success message" translate="yes">
+        Success! The company's owners has been submitted
+      </div>
+    </template>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An error occurred submitting the owners
+      </div>
+    </template>
+  </body>
 </html>
