--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html data-auth="false" data-template="false">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
     <title>Dashboard</title>
-    <link href="/public/pure-min.css" rel="stylesheet">
-    <style>
+      <style>
       body {
         background-color: #07C
       }
@@ -18,7 +19,7 @@
         font-weight: normal
       }
 
-      h1 a.pure-button {
+      h1 a.button {
         float: right;
         font-size: 1rem;
         margin-left: 0.5rem
@@ -46,12 +47,11 @@
         }
       }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <h1>
-      <a class="pure-button pure-button-primary" href="/account/signin">Sign in</a>
-      <a class="pure-button pure-button-primary" href="/account/register">Register</a> 
+      <a class="button" href="/account/signin">Sign in</a>
+      <a class="button" href="/account/register">Register</a> 
       Dashboard
     </h1>
     <div class="mast">
