--- a/menu-account.html
+++ b/menu-account.html
@@ -1,1 +1,1 @@
-<a href="/account/connect" data-module="@layeredapps/stripe-connect">Stripe Connect <span translate="yes">accounts</span></a>
+<a class="menu-link" href="/account/connect" data-module="@layeredapps/stripe-connect">Stripe Connect <span translate="yes">accounts</span></a>
