--- a/menu-administrator.html
+++ b/menu-administrator.html
@@ -1,1 +1,1 @@
-<a href="/administrator/connect" data-module="@layeredapps/stripe-connect">Stripe Connect <span translate="yes">module</span></a>
+<a class="menu-link" href="/administrator/connect" data-module="@layeredapps/stripe-connect">Stripe Connect <span translate="yes">module</span></a>
