--- a/src/www/account/connect/delete-person.html
+++ b/src/www/account/connect/delete-person.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" data-navbar="/account/connect/navbar-person.html">
-
-<head>
-  <meta charset="utf-8" />
-  <title translate="yes">Delete ${person.id}</title>
-  <link rel="stylesheet" href="/public/pure-min.css">
-  <link rel="stylesheet" href="/public/content.css">
-  <link rel="stylesheet" href="/public/content-additional.css">
-  <base target="_top" href="/">
-</head>
-
-<body>
-  <h1 translate="yes">Delete ${person.id}</h1>
-  <p translate="yes">The owner information will be deleted immediately and cannot be recovered.</p>
-  <div id="message-container"></div>
-  <form id="submit-form" method="post" class="pure-form pure-form-stacked"
-    action="/account/connect/delete-person?personid=${person.id}" name="submit-form">
-    <button id="submit-button" class="pure-button pure-button-primary" translate="yes">Delete</button>
-  </form>
-  <template id="success">
-    <div class="success message" translate="yes">
-      Success! The company owner has been deleted
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <title translate="yes">Delete person</title>
+    <link rel="stylesheet" href="/public/content.css">
+    <link rel="stylesheet" href="/public/content-additional.css">
+    <base target="_top" href="/">
+  </head>
+  <body>
+    <div class="container">
+      <h1 translate="yes">Delete person</h1>
+      <p translate="yes">The owner information will be deleted immediately and cannot be recovered.</p>
+      <div id="message-container"></div>
+      <form id="submit-form" method="post" class="input-form" action="/account/connect/delete-person?personid=${person.id}" name="submit-form">
+        <button id="submit-button" class="button" translate="yes">Delete</button>
+      </form>
     </div>
-  </template>
-  <template id="unknown-error">
-    <div class="error message" translate="yes">
-      Error! An error occurred deleting the company owner
-    </div>
-  </template>
-</body>
-
+    <template id="success">
+      <div class="success message" translate="yes">
+        Success! The company owner has been deleted
+      </div>
+    </template>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An error occurred deleting the company owner
+      </div>
+    </template>
+  </body>
 </html>
