--- a/src/www/account/connect/navbar-person.html
+++ b/src/www/account/connect/navbar-person.html
@@ -1,5 +1,5 @@
-<a href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes">Home</span></a>
-<a href="/account/connect">Stripe Connect</a>
-<a href="/account/connect/stripe-account?stripeid=${person.account}">${person.account}</a>
-<a id="edit-person-link" href="/account/connect/edit-person?personid=${person.id}" translate="yes">Edit</a>
-<a id="delete-person-link" href="/account/connect/delete-person?personid=${person.id}" translate="yes">Delete person</a>
+<a class="navigation-link" href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes">Home</span></a>
+<a class="navigation-link" href="/account/connect">Stripe Connect</a>
+<a class="navigation-link" href="/account/connect/stripe-account?stripeid=${person.account}">${person.account}</a>
+<a class="navigation-link" id="edit-person-link" href="/account/connect/edit-person?personid=${person.id}" translate="yes">Edit</a>
+<a class="navigation-link" id="delete-person-link" href="/account/connect/delete-person?personid=${person.id}" translate="yes">Delete person</a>
