--- a/src/www/account/connect/navbar-stripe-account.html
+++ b/src/www/account/connect/navbar-stripe-account.html
@@ -1,11 +1,13 @@
-<a href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes">Home</span></a>
-<a href="/account/connect">Stripe Connect</a>
-<a href="/account/connect/stripe-account?stripeid=${stripeAccount.id}">${stripeAccount.id}</a>
-<a href="/account/connect/edit-stripe-account?stripeid=${stripeAccount.id}" translate="yes">Edit registration</a> 
-<a href="/account/connect/edit-payment-information?stripeid=${stripeAccount.id}" translate="yes">Edit payment information</a>
-<a id="navbar-persons-link" href="/account/connect/persons?stripeid=${stripeAccount.id}" translate="yes">Persons</a>
-<a id="navbar-submit-company-owners-link" href="/account/connect/submit-company-owners?stripeid=${stripeAccount.id}" translate="yes">Submit owners</a>
-<a id="navbar-submit-company-directors-link" href="/account/connect/submit-company-directors?stripeid=${stripeAccount.id}" translate="yes">Submit directors</a>
-<a id="navbar-submit-company-executives-link" href="/account/connect/submit-company-directors?stripeid=${stripeAccount.id}" translate="yes">Submit directors</a>
-<a id="navbar-submit-link" href="/account/connect/submit-stripe-account?stripeid=${stripeAccount.id}" translate="yes">Submit</a>
-<a href="/account/connect/delete-stripe-account?stripeid=${stripeAccount.id}" translate="yes">Delete</a>
+<a class="navigation-link" href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes">Home</span></a>
+&#187;
+<a class="navigation-link" href="/account/connect">Stripe Connect</a>
+&#187;
+<a class="navigation-link" href="/account/connect/stripe-account?stripeid=${stripeAccount.id}">Stripe account</a>
+<a class="navigation-link" href="/account/connect/edit-stripe-account?stripeid=${stripeAccount.id}" translate="yes">Edit registration</a> 
+<a class="navigation-link" href="/account/connect/edit-payment-information?stripeid=${stripeAccount.id}" translate="yes">Edit payment information</a>
+<a class="navigation-link" id="navbar-persons-link" href="/account/connect/persons?stripeid=${stripeAccount.id}" translate="yes">Persons</a>
+<a class="navigation-link" id="navbar-submit-company-owners-link" href="/account/connect/submit-company-owners?stripeid=${stripeAccount.id}" translate="yes">Submit owners</a>
+<a class="navigation-link" id="navbar-submit-company-directors-link" href="/account/connect/submit-company-directors?stripeid=${stripeAccount.id}" translate="yes">Submit directors</a>
+<a class="navigation-link" id="navbar-submit-company-executives-link" href="/account/connect/submit-company-directors?stripeid=${stripeAccount.id}" translate="yes">Submit directors</a>
+<a class="navigation-link" id="navbar-submit-link" href="/account/connect/submit-stripe-account?stripeid=${stripeAccount.id}" translate="yes">Submit</a>
+<a class="navigation-link" href="/account/connect/delete-stripe-account?stripeid=${stripeAccount.id}" translate="yes">Delete</a>
