--- a/src/www/account/connect/person.html
+++ b/src/www/account/connect/person.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" data-navbar="/account/connect/navbar-person.html">
-<head>
-  <meta charset="utf-8" /> 
-  <title translate="yes">Person ${person.id}</title>
-  <link rel="stylesheet" href="/public/pure-min.css">
-  <link rel="stylesheet" href="/public/content.css">
-  <link rel="stylesheet" href="/public/content-additional.css">
-  <base target="_top" href="/">
-</head>
-<body>
-  <h1 translate="yes">Person ${person.id}</h1>
-  <p translate="yes">Additional information may have been submitted that is not displayed.</p>
-  <table id="persons-table" class="pure-table pure-table-striped data-table">
-    <tbody id="${person.id}">
-      <tr>
-        <th>ID</th>
-        <td>${person.id}</td>
-      </tr>
-      <tr>
-        <th translate="yes">Role</th>
-        <td id="owner" translate="yes">Beneficial owner</td>
-        <td id="director" translate="yes">Company director</td>
-        <td id="representative" translate="yes">Company representative</td>
-      </tr>
-      <tr>
-        <th translate="yes">Relationship</th>
-        <td>${person.relationship.title}</td>
-      </tr>
-      <tr>
-        <th translate="yes">Name</th>
-        <td>${person.first_name} ${person.last_name}</td>
-      </tr>
-      <tr id="requires-information">
-        <th translate="yes">Required information</th>
-        <td>
-          <span translate="yes">Additional information is required about this person</span>
-          <p class="pure-button-group"><a class="pure-button pure-button-primary" href="/account/connect/edit-person?personid=${person.id}">Add information</a></p>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" /> 
+    <title translate="yes">View person</title>
+    <link rel="stylesheet" href="/public/content.css">
+    <link rel="stylesheet" href="/public/content-additional.css">
+    <base target="_top" href="/">
+  </head>
+  <body>
+    <div class="container">
+      <h1 translate="yes">View person</h1>
+      <p translate="yes">Additional information may have been submitted that is not displayed.</p>
+      <table id="persons-table" class="data-table">
+        <tbody id="${person.id}">
+          <tr>
+            <th>ID</th>
+            <td>${person.id}</td>
+          </tr>
+          <tr>
+            <th translate="yes">Role</th>
+            <td id="owner" translate="yes">Beneficial owner</td>
+            <td id="director" translate="yes">Company director</td>
+            <td id="representative" translate="yes">Company representative</td>
+          </tr>
+          <tr>
+            <th translate="yes">Relationship</th>
+            <td>${person.relationship.title}</td>
+          </tr>
+          <tr>
+            <th translate="yes">Name</th>
+            <td>${person.first_name} ${person.last_name}</td>
+          </tr>
+          <tr id="requires-information">
+            <th translate="yes">Required information</th>
+            <td>
+              <p translate="yes">Additional information is required about this person</p>
+              <a class="button" href="/account/connect/edit-person?personid=${person.id}">Add information</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
