--- a/src/www/administrator/connect/delete-stripe-account.html
+++ b/src/www/administrator/connect/delete-stripe-account.html
@@ -1,102 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" data-navbar="/administrator/connect/navbar-stripe-account.html">
-
-<head>
-  <meta charset="utf-8" />
-  <title translate="yes">Delete ${stripeAccount.id}</title>
-  <link rel="stylesheet" href="/public/pure-min.css">
-  <link rel="stylesheet" href="/public/content.css">
-  <link rel="stylesheet" href="/public/content-additional.css">
-  <base target="_top" href="/">
-</head>
-
-<body>
-  <h1 translate="yes">Delete ${stripeAccount.id}</h1>
-  <div id="message-container"></div>
-  <table id="stripe-accounts-table" class="pure-table object-table">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th translate="yes">Name</th>
-        <th translate="yes">Status</th>
-      </tr>
-    </thead>
-    <tr id="${stripeAccount.id}">
-      <td>
-        <a href="/account/connect/stripe-account?stripeid=${stripeAccount.id}">${stripeAccount.id}</a>
-      </td>
-      <td id="blank-name" translate="yes">Not yet provided</td>
-      <td id="individual-name">${stripeAccount.individual.first_name || ""} ${stripeAccount.individual.last_name || ""}
-      </td>
-      <td id="business-name">${stripeAccount.company.name || ""}</td>
-      <td id="mcc-description"></td>
-      <td id="account-status"></td>
-    </tr>
-  </table>
-  <form id="submit-form" method="post" class="pure-form pure-form-stacked"
-    action="/administrator/connect/delete-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
-    <button id="submit-button" class="pure-button pure-button-primary" translate="yes">Delete</button>
-  </form>
-  <template id="success">
-    <div class="success message" translate="yes">
-      Success! The Stripe account has been deleted
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <title translate="yes">Delete Stripe account</title>
+    <link rel="stylesheet" href="/public/content.css">
+    <link rel="stylesheet" href="/public/content-additional.css">
+    <base target="_top" href="/">
+  </head>
+  <body>
+    <div class="container">
+      <h1 translate="yes">Delete Stripe account</h1>
+      <div id="message-container"></div>
+      <form id="submit-form" method="post" class="input-form" action="/administrator/connect/delete-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
+        <button id="submit-button" class="button" translate="yes">Delete</button>
+      </form>
     </div>
-  </template>
-  <template id="unknown-error">
-    <div class="error message" translate="yes">
-      Error! An error occurred deleting the Stripe account
-    </div>
-  </template>
-  <template id="not-submitted">
-    <span translate="yes">Not submitted yet</span>
-  </template>
-  <template id="verified">
-    <span translate="yes">Registration has been accepted</span>
-  </template>
-  <template id="verified">
-    <span translate="yes">Disabled by Stripe</span>
-  </template>
-  <template id="verified-requires-fields">
-    <span translate="yes">Requires additional information</span>
-  </template>
-  <template id="pending-submission">
-    <span translate="yes">Pending submission</span>
-  </template>
-  <template id="requirements.past_due">
-    <span translate="yes">Pending submission</span>
-  </template>
-  <template id="rejected.fraud">
-    <span><span translate="yes">Rejected by Stripe, see</span> <a
-        href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-  </template>
-  <template id="rejected.terms">
-    <span><span translate="yes">Rejected by Stripe, see</span> <a
-        href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-  </template>
-  <template id="rejected.listed">
-    <span><span translate="yes">Rejected by Stripe, see</span> <a
-        href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-  </template>
-  <template id="rejected.other">
-    <span><span translate="yes">Rejected by Stripe, see</span> <a
-        href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-  </template>
-  <template id="fields_needed">
-    <span translate="yes">More information is required</span>
-  </template>
-  <template id="listed">
-    <span translate="yes">Under review by Stripe</span>
-  </template>
-  <template id="under-review">
-    <span translate="yes">Under review by Stripe</span>
-  </template>
-  <template id="disabled">
-    <span><span translate="yes">Disabled by Stripe, see</span> <a
-        href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-  </template>
-  <template id="deleted">
-    <span translate="yes">Deleted</span>
-  </template>
-</body>
-
+    <template id="success">
+      <div class="success message" translate="yes">
+        Success! The Stripe account has been deleted
+      </div>
+    </template>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An error occurred deleting the Stripe account
+      </div>
+    </template>
+  </body>
 </html>
