--- a/src/www/administrator/connect/navbar.html
+++ b/src/www/administrator/connect/navbar.html
@@ -1,4 +1,4 @@
-<a href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes">Home</span></a> 
-<a href="/administrator/connect" translate="yes">Connect administration</a> 
-<a href="/administrator/connect/stripe-accounts" translate="yes">Stripe accounts</a> 
-<a href="/administrator/connect/payouts" translate="yes">Payouts</a>
+<a class="navigation-link" href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes">Home</span></a> 
+<a class="navigation-link" href="/administrator/connect" translate="yes">Connect administration</a> 
+<a class="navigation-link" href="/administrator/connect/stripe-accounts" translate="yes">Stripe accounts</a> 
+<a class="navigation-link" href="/administrator/connect/payouts" translate="yes">Payouts</a>
