--- a/src/www/home.html
+++ b/src/www/home.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title translate="yes">Web application powered by Dashboard</title>
-  <link href="/public/pure-min.css" rel="stylesheet">
-  <link href="/public/content.css" rel="stylesheet">
-  <link href="/public/content-additional.css" rel="stylesheet">
-</head>
-
-<body>
-  <template id="navbar">
-    <a href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes" translate="yes">Home</span></a>
-  </template>
-  <base target="_top" href="/">
-  <h1 translate="yes">Application home page</h1>
-  <p translate="yes">Your dashboard server is ready to run.</p>
-</body>
-
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" /> 
+    <title translate="yes">Web application powered by Dashboard</title>
+    <link href="/public/content.css" rel="stylesheet">
+    <link href="/public/content-additional.css" rel="stylesheet">
+    <base target="_top" href="/">
+    <template id="navbar">
+      <a class="navigation-link" href="/home"><img src="/public/home.svg" alt="Application home"><span translate="yes" translate="yes">Home</span></a>
+    </template>
+  </head>
+  <body>
+    <div class="container">
+      <h1 translate="yes">Application home page</h1>
+      <p translate="yes">Your dashboard server is ready to run.</p>
+    </div>
+  </body>
 </html>
