--- a/src/www/account/connect/submit-stripe-account.html
+++ b/src/www/account/connect/submit-stripe-account.html
@@ -41,6 +41,19 @@
           </table>
         </div>
       </div>
+      <div id="executives-container">
+        <h2 translate="yes">Company executives</h2>
+        <div class="list-table-wrapper">
+          <table id="executives-table" class="list-table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th translate="yes">Name</th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+      </div>
       <form id="submit-form" method="post" class="input-form" action="/account/connect/submit-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
         <div class="input-fields">
           <input checked disabled type="checkbox"> I have provided complete and accurate information
@@ -49,10 +62,13 @@
           <input checked disabled type="checkbox"> I am authorized to represent this business
         </div>
         <div id="company-company-owners-option" class="input-fields">
-          <input checked disabled type="checkbox"> I have submitted, or there are no, relevant company owners information
+          <input checked disabled type="checkbox"> I have submitted, or there are no, relevant company owner information
         </div>
         <div id="company-directors-option" class="input-fields">
-          <input checked disabled type="checkbox"> I have submitted, or there are no, relevant company directors names
+          <input checked disabled type="checkbox"> I have submitted, or there are no, relevant company director information
+        </div>
+        <div id="company-executives-option" class="input-fields">
+          <input checked disabled type="checkbox"> I have submitted, or there are no, relevant company executive information
         </div>
         <div class="input-fields">
           <input checked disabled type="checkbox"> I accept the Stripe Connect <a href="https://stripe.com/us/connect-account/legal">terms and conditions</a>
@@ -62,21 +78,7 @@
         </div>
       </form>
     </div>
-    <template id="owner-row">
-      <tr id="${person.id}">
-        <td><a href="/account/connect/person?personid=${person.id}">${person.id}</a></td>
-        <td>${person.first_name} ${person.last_name}</td>
-      </tr>
-      <tr id="${person.id}">
-        <td><a href="/account/connect/person?personid=${person.id}">${person.id}</a></td>
-        <td>${person.first_name} ${person.last_name}</td>
-      </tr>
-    </template>
-    <template id="director-row">
-      <tr id="${person.id}">
-        <td><a href="/account/connect/person?personid=${person.id}">${person.id}</a></td>
-        <td>${person.first_name} ${person.last_name}</td>
-      </tr>
+    <template id="person-row">
       <tr id="${person.id}">
         <td><a href="/account/connect/person?personid=${person.id}">${person.id}</a></td>
         <td>${person.first_name} ${person.last_name}</td>
