--- a/src/www/account/connect/person.html
+++ b/src/www/account/connect/person.html
@@ -18,11 +18,21 @@
             <th>ID</th>
             <td>${person.id}</td>
           </tr>
-          <tr>
-            <th translate="yes">Role</th>
-            <td id="owner" translate="yes">Beneficial owner</td>
-            <td id="director" translate="yes">Company director</td>
-            <td id="representative" translate="yes">Company representative</td>
+          <tr id="representative">
+            <th translate="yes">Account representative</th>
+            <td translate="yes">This person is the Stripe account representative</td>
+          </tr>
+          <tr id="owner">
+            <th translate="yes">Company owner</th>
+            <td translate="yes">This person is designated as an owner</td>
+          </tr>
+          <tr id="director">
+            <th translate="yes">Company director</th>
+            <td translate="yes">This person is designated as a director</td>
+          </tr>
+          <tr id="executive">
+            <th translate="yes">Company executive</th>
+            <td translate="yes">This person is designated as an executive</td>
           </tr>
           <tr>
             <th translate="yes">Relationship</th>
