Charts and presentation improvements

--- a/src/www/account/connect/submit-company-directors.html
+++ b/src/www/account/connect/submit-company-directors.html
@@ -6,6 +6,7 @@
     <title translate="yes">Submit directors for Stripe account</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
+    <link rel="stylesheet" href="/public/connect/connect.css">
     <base target="_top" href="/">
   </head>
   <body>
