--- a/src/www/account/connect/delete-person.html
+++ b/src/www/account/connect/delete-person.html
@@ -6,6 +6,7 @@
     <title translate="yes">Delete person</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
+    <link rel="stylesheet" href="/public/connect/connect.css">
     <base target="_top" href="/">
   </head>
   <body>
