--- a/src/www/account/connect/submit-stripe-account.html
+++ b/src/www/account/connect/submit-stripe-account.html
@@ -8,6 +8,7 @@
     <title translate="yes">Submit Stripe account</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
+    <link rel="stylesheet" href="/public/connect/connect.css">
     <base target="_top" href="/">
   </head>
   <body>
