--- a/src/www/administrator/connect/index.html
+++ b/src/www/administrator/connect/index.html
@@ -6,77 +6,103 @@
     <title translate="yes">Connect administration</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
+    <link rel="stylesheet" href="/public/connect/connect.css">
     <base target="_top" href="/">
   </head>
   <body>
     <div class="container">
       <h1 translate="yes">Connect administration</h1>
-      <div id="registrations-container">
-        <h2 translate="yes">Recent registrations</h2>
-        <div class="list-table-wrapper">
-          <table id="stripe-accounts-table" class="list-table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th translate="yes">Name</th>
-                <th translate="yes">Status</th>
-                <th translate="yes">Created</th>
-              </tr>
-            </thead>
-          </table>
+      <div class="charts" id="created-chart-container">
+        <div class="chart">
+          <h2>Stripe accounts created in last 90 days</h2>
+          <div class="metrics" id="created-highlights">
+          </div>
+          <div class="graph">
+            <div class="values" id="created-values"></div>
+            <div class="columns">
+              <div class="padder">
+                <ol id="created-chart" class="ninety"></ol>
+              </div>
+              <legend>
+                <span>Today</span>
+                <span>90 days ago</span>
+              </legend>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="charts" id="approved-chart-container">
+        <div class="chart">
+          <h2>Stripe accounts approved in last 90 days</h2>
+          <div class="metrics" id="approved-highlights">
+          </div>
+          <div class="graph">
+            <div class="values" id="approved-values"></div>
+            <div class="columns">
+              <div class="padder">
+                <ol id="approved-chart" class="ninety"></ol>
+              </div>
+              <legend>
+                <span>Today</span>
+                <span>90 days ago</span>
+              </legend>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="charts" id="payouts-chart-container">
+        <div class="chart">
+          <h2>Payouts created in last 90 days</h2>
+          <div class="metrics" id="payouts-highlights">
+          </div>
+          <div class="graph">
+            <div class="values" id="payouts-values"></div>
+            <div class="columns">
+              <div class="padder">
+                <ol id="payouts-chart" class="ninety"></ol>
+              </div>
+              <legend>
+                <span>Today</span>
+                <span>90 days ago</span>
+              </legend>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <template id="stripe-account-row">
-      <tr id="${account.id}">
-        <td><a href="/administrator/connect/stripe-account?stripeid=${account.id}">${account.id}</a></td>
-        <td id="individual-name-${account.id}">${account.individual.first_name || ""} ${account.individual.last_name || ""}</td>
-        <td id="business-name-${account.id}">${account.company.name || ""}</td>
-        <td id="account-status-${account.id}"></td>
-        <td>${account.createdAtFormatted}</td>
-      </tr>
+    <template id="chart-value">
+      <h3>${object.value}</h3>
     </template>
-    <template id="not-submitted">
-      <span translate="yes">Not submitted yet</span>
+    <template id="chart-column">
+      <li><span title="${metric.value} on ${metric.dateKey}" style="height: ${metric.normalized}%; top: ${metric.top}%"></span></li>
     </template>
-    <template id="verified">
-      <span translate="yes">Registration has been accepted</span>
-    </template>
-    <template id="verified-requires-fields">
-      <span translate="yes">Requires additional information</span>
-    </template>
-    <template id="requirements.past_due">
-      <span translate="yes">Requires additional information</span>
-    </template>
-    <template id="pending-submission">
-      <span translate="yes">Pending submission</span>
-    </template>
-    <template id="rejected.fraud">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-    </template>
-    <template id="rejected.terms_of_service">
-      <span translate="yes">Rejected for terms of service violation</span>
-    </template>
-    <template id="rejected.listed">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-    </template>
-    <template id="rejected.other">
-      <span><span translate="yes">Rejected by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
-    </template>
-    <template id="requirements.pending_verification">
-      <span translate="yes">Pending verification</span>
-    </template>
-    <template id="fields_needed">
-      <span translate="yes">More information is required</span>
-    </template>
-    <template id="listed">
-      <span translate="yes">Under review by Stripe</span>
-    </template>
-    <template id="under-review">
-      <span translate="yes">Under review by Stripe</span>
-    </template>
-    <template id="disabled">
-      <span><span translate="yes">Disabled by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed">common reasons</a></span>
+    <template id="metric-highlights">
+      <ul>
+        <li>
+          ${highlight.todayFormatted}
+          <span>today</span>
+        </li>
+        <li>
+          ${highlight.yesterdayFormatted}
+          <span>yesterday</span>
+        </li>
+        <li>
+          ${highlight.last7DaysFormatted}
+          <span>7 days</span>
+        </li>
+        <li>
+          ${highlight.last30DaysFormatted}
+          <span>30 days</span>
+        </li>
+        <li>
+          ${highlight.last90DaysFormatted}
+          <span>90 days</span>
+        </li>
+        <li>
+          ${highlight.totalFormatted}
+          <span>all time</span>
+        </li>
+      </ul>
     </template>
   </body>
 </html>
