--- a/src/www/administrator/connect/payouts.html
+++ b/src/www/administrator/connect/payouts.html
@@ -6,6 +6,7 @@
     <title translate="yes">Payouts</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
+    <link rel="stylesheet" href="/public/connect/connect.css">
     <base target="_top" href="/">
   </head>
   <body>
@@ -15,12 +16,31 @@
       <div id="no-payouts">
         <p translate="yes">No payouts have occurred yet.</p>
       </div>
+      <div class="charts" id="created-chart-container">
+        <div class="chart">
+          <h2>Created in last 365 days</h2>
+          <div class="metrics" id="created-highlights">
+          </div>
+          <div class="graph">
+            <div class="values" id="created-values"></div>
+            <div class="columns">
+              <div class="padder">
+                <ol id="created-chart" class="threesixfive"></ol>
+              </div>
+              <legend>
+                <span>Today</span>
+                <span>365 days ago</span>
+              </legend>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="list-table-wrapper">
         <table id="payouts-table" class="list-table">
           <thead>
             <tr>
               <th>ID</th>
-              <th translate="yes">Amount</th>
+              <th class="money" translate="yes">Amount</th>
               <th translate="yes">Stripe account</th>
               <th translate="yes">Status</th>
               <th translate="yes">Description</th>
@@ -31,6 +51,40 @@
       </div>
       <ul id="page-links" class="pagination"></ul>
     </div>
+    <template id="chart-value">
+      <h3>${object.value}</h3>
+    </template>
+    <template id="chart-column">
+      <li><span title="${metric.value} on ${metric.dateKey}" style="height: ${metric.normalized}%; top: ${metric.top}%"></span></li>
+    </template>
+    <template id="metric-highlights">
+      <ul>
+        <li>
+          ${highlight.todayFormatted}
+          <span>today</span>
+        </li>
+        <li>
+          ${highlight.yesterdayFormatted}
+          <span>yesterday</span>
+        </li>
+        <li>
+          ${highlight.last7DaysFormatted}
+          <span>7 days</span>
+        </li>
+        <li>
+          ${highlight.last30DaysFormatted}
+          <span>30 days</span>
+        </li>
+        <li>
+          ${highlight.last90DaysFormatted}
+          <span>90 days</span>
+        </li>
+        <li>
+          ${highlight.totalFormatted}
+          <span>all time</span>
+        </li>
+      </ul>
+    </template>
     <template id="page-link">
       <li>
         <a href="/administrator/connect/payouts?offset=${page.offset}" id="page-link-${page.pageNumber}">${page.pageNumber}</a>
@@ -41,14 +95,17 @@
         <td>
           <a href="/administrator/connect/payout?payoutid=${payout.id}">${payout.id}</a>
         </td>
-        <td>${payout.amountFormatted}</td>
+        <td class="money">${payout.amountFormatted} ${payout.currency}</td>
         <td>
           <a href="/administrator/connect/stripe-account?stripeid=${payout.stripeid}">${payout.stripeid}</a>
         </td>
         <td id="status-${payout.id}"></td>
-        <td>${payout.description}</td>
+        <td>${payout.description || ''}</td>
         <td>${payout.createdAtFormatted}</td>
       </tr>
+    </template>
+    <template id="paid">
+      <span>Paid</span>
     </template>
     <template id="unsupported_card">
       <span>Card unsupported by bank.</span>
