--- a/src/www/index.html
+++ b/src/www/index.html
@@ -2,8 +2,14 @@
 <html lang="en" data-auth="false" data-template="false">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8" /> 
+    <meta charset="UTF-8" /> 
     <title translate="yes">Dashboard + Stripe Connect landing page</title>
+    <link rel="icon" href="/public/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" />
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#000000">
     <style>
       body { background-color: #2F365F; font-family: sans-serif; padding: 0; margin: 0 }
       h1 { line-height: 2.2rem; font-size: 1.2rem; color: #FFF; margin: 0; padding: 1rem 1rem 1rem 0.5rem; font-weight: normal }
