Clean up presentation in screenshots of account pages

--- a/src/www/account/connect/stripe-accounts.html
+++ b/src/www/account/connect/stripe-accounts.html
@@ -2,7 +2,7 @@
 <html lang="en" data-navbar="/account/connect/navbar.html">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8" /> 
+    <meta charset="UTF-8" /> 
     <title translate="yes">Stripe accounts</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
