--- a/src/www/administrator/connect/stripe-accounts.html
+++ b/src/www/administrator/connect/stripe-accounts.html
@@ -2,7 +2,7 @@
 <html lang="en" data-navbar="/administrator/connect/navbar.html">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8" /> 
+    <meta charset="UTF-8" /> 
     <title translate="yes">Stripe accounts</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
@@ -135,7 +135,7 @@
       <p translate="yes">The registration has not been submitted.</p>
     </template>
     <template id="submitted-information">
-      <p translate="yes">The registration was submitted on ${account.dateFormatted}.</p>
+      <p translate="yes">The registration was submitted on ${account.submittedAtFormatted}.</p>
     </template>
     <template id="not-submitted">
       <span translate="yes">Not submitted yet</span>
