--- a/src/www/home.html
+++ b/src/www/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8" /> 
+    <meta charset="UTF-8" /> 
     <title translate="yes">Web application powered by Dashboard</title>
     <link href="/public/content.css" rel="stylesheet">
     <link href="/public/content-additional.css" rel="stylesheet">
