--- a/src/www/account/connect/submit-stripe-account.html
+++ b/src/www/account/connect/submit-stripe-account.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script id="stripe-js-v2"></script>
     <script id="stripe-js-v3"></script>
-    <meta charset="utf-8" /> 
+    <meta charset="UTF-8" /> 
     <title translate="yes">Submit Stripe account</title>
     <link rel="stylesheet" href="/public/content.css">
     <link rel="stylesheet" href="/public/content-additional.css">
