--- a/src/www/account/connect/submit-stripe-account.html
+++ b/src/www/account/connect/submit-stripe-account.html
@@ -74,7 +74,7 @@
         <div class="input-fields">
           <input checked disabled type="checkbox"> I accept the Stripe Connect <a href="https://stripe.com/us/connect-account/legal">terms and conditions</a>
         </div>
-        <div class="button-group spaced-buttons">
+        <div class="form-buttons">
           <button id="submit-button" class="button" translate="yes">Submit registration</button>
         </div>
       </form>
