--- a/src/www/account/connect/submit-company-executives.html
+++ b/src/www/account/connect/submit-company-executives.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <form id="submit-form" method="post" class="input-form" action="/account/connect/submit-company-executives?stripeid=${stripeAccount.id}" name="submit-form">
-        <div class="button-group spaced-buttons">
+        <div class="form-buttons">
           <button id="submit-button" class="button" translate="yes">Submit executives</button>
         </div>
       </form>
