--- a/src/www/account/connect/create-stripe-account.html
+++ b/src/www/account/connect/create-stripe-account.html
@@ -18,14 +18,16 @@
         <div class="input-fields">
           <label class="field-label" for="individual" translate="yes">Account type</label>
           <div class="field">
-            <label class="field-label">
-              <input id="individual" type="radio" name="business_type" value="individual">
-              <span translate="yes">Individual</span>
-            </label>
-            <label class="field-label">
-              <input id="company" type="radio" name="business_type" value="company"> 
-              <span translate="yes">Company</span>
-            </label>
+            <div class="checkbox-fields checkbox-group">
+              <label class="field-label">
+                <input id="individual" type="radio" name="business_type" value="individual">
+                <span translate="yes">Individual</span>
+              </label>
+              <label class="field-label">
+                <input id="company" type="radio" name="business_type" value="company"> 
+                <span translate="yes">Company</span>
+              </label>
+            </div>
           </div>
         </div>
         <div class="input-fields">
