--- a/src/www/account/connect/index.html
+++ b/src/www/account/connect/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h1 translate="yes">Stripe Connect accounts</h1>
       <p><span translate="yes">Become a vendor by verifying your personal identity and company information through</span>&nbsp;<a href="https://stripe.com/connect">Stripe Connect</a>.</p>
-      <div class="two-columns">
+      <div class="requirements-wrapper">
         <div class="requirements">
           <h2 translate="yes">Individual requirements</h2>
           <ol class="numbered-list">
