--- a/src/www/account/connect/stripe-accounts.html
+++ b/src/www/account/connect/stripe-accounts.html
@@ -17,27 +17,23 @@
         <p translate="yes">No Stripe accounts have been created yet.</p>
       </div>
       <div class="requirements-wrapper">
-        <div class="requirements-container">
-          <div class="requirements">
-            <h2 translate="yes">Individual requirements</h2>
-            <ol>
-              <li translate="yes">Verified personal information</li>
-              <li translate="yes">Resident of a supported country</li>
-              <li translate="yes">Bank account in a supported country</li>
-            </ol>
-            <a id="create-individual-link" href="/account/connect/create-stripe-account?business_type=individual" class="button" translate="yes">Start individual registration</a>
-          </div>
+        <div class="requirements">
+          <h2 translate="yes">Individual requirements</h2>
+          <ol class="numbered-list">
+            <li translate="yes">Verified personal information</li>
+            <li translate="yes">Resident of a supported country</li>
+            <li translate="yes">Bank account in a supported country</li>
+          </ol>
+          <a id="create-individual-link" href="/account/connect/create-stripe-account?business_type=individual" class="button" translate="yes">Start individual registration</a>
         </div>
-        <div class="requirements-container">
-          <div class="requirements">
-            <h2 translate="yes">Business requirements</h2>
-            <ol>
-              <li translate="yes">Verified personal information</li>
-              <li translate="yes">Business registered in a supported country</li>
-              <li translate="yes">Bank account in a supported country</li>
-            </ol>
-            <a href="/account/connect/create-stripe-account?business_type=company" class="button" translate="yes">Start company registration</a>
-          </div>
+        <div class="requirements">
+          <h2 translate="yes">Business requirements</h2>
+          <ol class="numbered-list">
+            <li translate="yes">Verified personal information</li>
+            <li translate="yes">Business registered in a supported country</li>
+            <li translate="yes">Bank account in a supported country</li>
+          </ol>
+          <a href="/account/connect/create-stripe-account?business_type=company" class="button" translate="yes">Start company registration</a>
         </div>
       </div>
       <div id="registrations-container">
