--- a/src/www/account/connect/submit-company-executives.html
+++ b/src/www/account/connect/submit-company-executives.html
@@ -38,7 +38,7 @@
       <tr id="${person.id}">
         <td><a href="/account/connect/person?personid=${person.id}">${person.id}</a></td>
         <td>${person.first_name} ${person.last_name}</td>
-        <td id="requires-information-${person.id}"><a class="button" href="/account/connect/edit-person?personid=${person.id}&amp;return-url=/account/connect/submit-company-executives%3Fstripeid=${person.account}" translate="yes">Add information</a></td>
+        <td id="requires-information-${person.id}"><a class="small-button" href="/account/connect/edit-person?personid=${person.id}&amp;return-url=/account/connect/submit-company-executives%3Fstripeid=${person.account}" translate="yes">Add information</a></td>
         <td id="requires-no-information-${person.id}">-</td>
       </tr>
     </template>
