--- a/src/www/account/connect/create-person.html
+++ b/src/www/account/connect/create-person.html
@@ -16,7 +16,7 @@
         <div id="message-container"></div>
         <div id="form-container">
           <h2 translate="yes">Relationship to company</h2>
-          <div class="input-fields">
+          <div class="checkbox-fields checkbox-group">
             <label class="field-label"><input type="checkbox" id="relationship_representative" name="relationship_representative" value="true"> Representative (must be executive)</label>
             <label class="field-label" id="executive-container"><input type="checkbox" id="relationship_executive" name="relationship_executive" value="true"> Company executive</label>
             <label class="field-label" id="director-container"><input type="checkbox" id="relationship_director" name="relationship_director" value="true"> Company director</label>
@@ -25,13 +25,21 @@
           <div class="input-fields">
             <label class="field-label" for="relationship_title" translate="yes">Job, role or relationship title</label>
             <div class="field">
-              <input class="full-width" required="required" id="relationship_title" name="relationship_title" type="text" maxlength="100">
+              <div class="normal-field">
+                <div>
+                  <input class="full-width" required="required" id="relationship_title" name="relationship_title" type="text" maxlength="100">
+                </div>
+              </div>
             </div>
           </div>
           <div class="input-fields">
             <label class="field-label" for="relationship_percent_ownership" translate="yes">Percent owned (if any)</label>
             <div class="field">
-              <input class="full-width" required="required" id="relationship_percent_ownership" name="relationship_percent_ownership" type="text" maxlength="4">
+              <div class="tiny-field">
+                <div>
+                  <input class="full-width" required="required" id="relationship_percent_ownership" name="relationship_percent_ownership" type="text" maxlength="4">
+                </div>
+              </div>
             </div>
           </div>
           <div class="form-buttons">
