--- a/src/www/account/connect/stripe-account.html
+++ b/src/www/account/connect/stripe-account.html
@@ -148,7 +148,7 @@
         </td>
         <td>${person.first_name} ${person.last_name}</td>
         <td id="requires-information-${person.id}">
-          <a class="button" href="/account/connect/edit-person?personid=${person.id}" translate="yes">Add information</a>
+          <a class="small-button" href="/account/connect/edit-person?personid=${person.id}" translate="yes">Add information</a>
         </td>
         <td id="requires-no-information-${person.id}">-</td>
       </tr>
