fix: null reference when there are no accounts

--- a/src/www/administrator/connect/index.html
+++ b/src/www/administrator/connect/index.html
@@ -12,6 +12,9 @@
   <body>
     <div class="container">
       <h1 translate="yes">Connect administration</h1>
+      <div id="no-stripe-accounts">
+        <p translate="yes">No Stripe accounts have been created yet.</p>
+      </div>
       <div class="charts" id="created-chart-container">
         <div class="chart">
           <h2>Stripe accounts created in last 90 days</h2>
